--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "fetch.js",
   "scripts": {
     "start": "parcel index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "predeploy": "rm -rf dist && parcel build index.html --public-url /js-graphql-client-example/",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
     "graphql.js": "^0.4.20"
   },
   "devDependencies": {
+    "gh-pages": "^1.2.0",
     "parcel": "^1.9.7"
   }
 }
